Fixed Button Spacing

--- a/src/App.css
+++ b/src/App.css
@@ -19,5 +19,5 @@ h1 {
 
 li {
   list-style-type: none;
-  margin: 10px;
+  padding: 10px;
 }
